# webapp-template

./: .gitignore  README.md  cookiecutter.json  pyproject.toml  tmpclaude-74a1-cwd
hooks/: post_gen_project.py  pre_prompt.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/backend/: .env.example  Dockerfile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/backend/app/: config.py  main.py
{{cookiecutter.project_slug}}/backend/app/api/routes/: user.py
{{cookiecutter.project_slug}}/backend/app/api/schemas/: user.py
{{cookiecutter.project_slug}}/backend/app/database/: seed.py  session.py
{{cookiecutter.project_slug}}/backend/app/models/: base.py  user.py
{{cookiecutter.project_slug}}/backend/migrations/: alembic.ini  env.py
{{cookiecutter.project_slug}}/backend/tests/: conftest.py
{{cookiecutter.project_slug}}/backend/tests/integration/: test_api.py
{{cookiecutter.project_slug}}/backend/tests/unit/: test_models.py
{{cookiecutter.project_slug}}/frontend/: Dockerfile  package.json  tailwind.config.js
{{cookiecutter.project_slug}}/frontend/static/css/: input.css  main.css  tailwind.css
{{cookiecutter.project_slug}}/frontend/static/js/: main.js
{{cookiecutter.project_slug}}/frontend/templates/: __init__.py  base.html
{{cookiecutter.project_slug}}/tests_e2e/: test_flows.py
