[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webapp-template"
version = "0.1.0"
description = "Production-ready cookie-cutter template for Python web applications"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Developer", email = "dev@example.com" },
]
keywords = ["cookiecutter", "fastapi", "sqlalchemy", "template"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "cookiecutter>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/username/webapp-template"
Documentation = "https://github.com/username/webapp-template"
Repository = "https://github.com/username/webapp-template"
Issues = "https://github.com/username/webapp-template/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/webapp_template"]
